# mom6-tools

./: .gitignore  README.md
.github/workflows/: main.yml
MOM6-cmake/: .gitignore  CMakeLists.txt  README.md
MOM6-examples/: README.md  buildMOM6.sh  buildMOM6cmake.sh  runMOM6.sh
MOM6-examples/mkmf/templates/: nccs-intel.mk
scripts/: .gitignore  GMAOobs2ioda.sh  MERRA2Forcings.py  MERRA2_Forcings.py  getGMAOOceanObs.sh
